[fixed layout issue #4]

--- a/components/carousel/carousel.scss
+++ b/components/carousel/carousel.scss
@@ -13,7 +13,7 @@
 }
 
 .carousel {
-    height: 100vh !important;
+    height: 80vh !important;
 }
 
 .skills-view {
